--- a/pages/19.html
+++ b/pages/19.html
@@ -291,8 +291,9 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/256/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/256/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="https://ncatlab.org/nlab/author/category%20theory" title="Overview of nLab pages which category theory has edited" style="color: black">Pages contributed to</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
@@ -660,17 +661,17 @@ margin-left: 0em;
 <div class='un_remark'>
 <h6 id='paradigm'>Paradigm</h6>
 
-<p>As opposed to <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a>, category theory focuses not on elements <math class='maruku-mathml' display='inline' id='mathml_58d17defab181878c60d348686ec46df7db98190_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>,</mo><mi>y</mi><mo>,</mo><mi>⋯</mi></mrow><annotation encoding='application/x-tex'>x,y, \cdots</annotation></semantics></math> – called <a class='existingWikiWord' href='/nlab/show/object'>object</a>s – but on the <strong>relations</strong> between these objects: the (<a class='existingWikiWord' href='/nlab/show/homomorphism'>homo</a>)<a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a>s between them</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_58d17defab181878c60d348686ec46df7db98190_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mover><mo>→</mo><mi>f</mi></mover><mi>y</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>As opposed to <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a>, category theory focuses not on elements <math class='maruku-mathml' display='inline' id='mathml_c59b935af86e52af22e0603e02c1b8f969c879e0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>,</mo><mi>y</mi><mo>,</mo><mi>⋯</mi></mrow><annotation encoding='application/x-tex'>x,y, \cdots</annotation></semantics></math> – called <a class='existingWikiWord' href='/nlab/show/object'>object</a>s – but on the <strong>relations</strong> between these objects: the (<a class='existingWikiWord' href='/nlab/show/homomorphism'>homo</a>)<a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a>s between them</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c59b935af86e52af22e0603e02c1b8f969c879e0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mover><mo>→</mo><mi>f</mi></mover><mi>y</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   x \stackrel{f}{\to} y
   \,.
 
 </annotation></semantics></math></div>
-<p>Later this will lead naturally on to an infinite sequence of steps: first <a class='existingWikiWord' href='/nlab/show/2-category+theory'>2-category theory</a> which focuses on relation between relations, morphisms between morphisms: <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphism</a>s, then 3-category theory, etc. and to various variants, <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, <a class='existingWikiWord' href='/nlab/show/Gray-category'>Gray categories</a> …. Eventually this leads to <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>, where one considers <math class='maruku-mathml' display='inline' id='mathml_58d17defab181878c60d348686ec46df7db98190_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-morphisms in all dimensions and to a wealth of interacting intuitions and concepts.</p>
+<p>Later this will lead naturally on to an infinite sequence of steps: first <a class='existingWikiWord' href='/nlab/show/2-category+theory'>2-category theory</a> which focuses on relation between relations, morphisms between morphisms: <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphism</a>s, then 3-category theory, etc. and to various variants, <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, <a class='existingWikiWord' href='/nlab/show/Gray-category'>Gray categories</a> …. Eventually this leads to <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>, where one considers <math class='maruku-mathml' display='inline' id='mathml_c59b935af86e52af22e0603e02c1b8f969c879e0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-morphisms in all dimensions and to a wealth of interacting intuitions and concepts.</p>
 </div>
 
 <p>The concept that formalizes this is that of a <a class='existingWikiWord' href='/nlab/show/category'>category</a>: a collection of arrows/morphism that can be <a class='existingWikiWord' href='/nlab/show/composition'>composed</a> if they are adjacent</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_58d17defab181878c60d348686ec46df7db98190_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><mrow><mtable><mtr><mtd><mi>x</mi></mtd></mtr> <mtr><mtd><msup><mo stretchy='false'>↓</mo> <mpadded width='0'><mi>f</mi></mpadded></msup></mtd></mtr> <mtr><mtd><mi>y</mi></mtd></mtr> <mtr><mtd><msup><mo stretchy='false'>↓</mo> <mpadded width='0'><mi>g</mi></mpadded></msup></mtd></mtr> <mtr><mtd><mi>z</mi></mtd></mtr></mtable></mrow><mspace width='thickmathspace'></mspace><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mo>↦</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mrow><mo>(</mo><mrow><mtable><mtr><mtd><mi>x</mi></mtd></mtr> <mtr><mtd><msup><mo stretchy='false'>↓</mo> <mpadded width='0'><mrow><mi>g</mi><mo>∘</mo><mi>f</mi></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>z</mi></mtd></mtr></mtable></mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c59b935af86e52af22e0603e02c1b8f969c879e0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><mrow><mtable><mtr><mtd><mi>x</mi></mtd></mtr> <mtr><mtd><msup><mo stretchy='false'>↓</mo> <mpadded width='0'><mi>f</mi></mpadded></msup></mtd></mtr> <mtr><mtd><mi>y</mi></mtd></mtr> <mtr><mtd><msup><mo stretchy='false'>↓</mo> <mpadded width='0'><mi>g</mi></mpadded></msup></mtd></mtr> <mtr><mtd><mi>z</mi></mtd></mtr></mtable></mrow><mspace width='thickmathspace'></mspace><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mo>↦</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mrow><mo>(</mo><mrow><mtable><mtr><mtd><mi>x</mi></mtd></mtr> <mtr><mtd><msup><mo stretchy='false'>↓</mo> <mpadded width='0'><mrow><mi>g</mi><mo>∘</mo><mi>f</mi></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>z</mi></mtd></mtr></mtable></mrow><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \left(
     \array{
        x
@@ -752,7 +753,7 @@ margin-left: 0em;
 <p>In <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a> this continues with</p>
 
 <ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_58d17defab181878c60d348686ec46df7db98190_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/transfor'>transfor</a>s for all <math class='maruku-mathml' display='inline' id='mathml_58d17defab181878c60d348686ec46df7db98190_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k \in \mathbb{N}</annotation></semantics></math>.</li>
+<li><math class='maruku-mathml' display='inline' id='mathml_c59b935af86e52af22e0603e02c1b8f969c879e0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/transfor'>transfor</a>s for all <math class='maruku-mathml' display='inline' id='mathml_c59b935af86e52af22e0603e02c1b8f969c879e0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k \in \mathbb{N}</annotation></semantics></math>.</li>
 </ul>
 </div>
 
@@ -1023,7 +1024,17 @@ margin-left: 0em;
 
 <p>A better (albeit not perfect) description of topology is that it is the study of continuous maps; and category theory is likewise better described as the theory of functors. Both descriptions are logically inadmissible as initial definitions, but they more accurately reflect both the present and the historical motivations of the subjects.</p>
 
-<p id='CategoriesForNaturalTransformations'> It is not too misleading, at least historically, to say that categories are what one must define in order to define natural transformations. (from <a href='#Freyd64'>Freyd 64, page 1</a>)</p>
+<p id='CategoriesForNaturalTransformations'> It is not too misleading, at least historically, to say that categories are what one must define in order to define natural transformations.</p>
+
+<p>(from <a href='#Freyd64'>Freyd 64, page 1</a>)</p>
+</blockquote>
+
+<p>and</p>
+
+<blockquote>
+<p id='CategoriesForNaturalTransformationsII'> Category theory is an embodiment of Klein’s dictum that it is the maps that count in mathematics. If the dictum is true, then it is the functors between categories that are important, not the categories. And such is the case. Indeed, the notion of category is best excused as that which is necessary in order to have the notion of functor. But the progression does not stop here. There are maps between functors, and they are called natural transformations. And it was in order to define these that Eilenberg and MacLane first defined functors.</p>
+
+<p>(from <a href='#Freyd65'>Freyd 65, beginning of Part Two</a>)</p>
 </blockquote>
 
 <p>The paper <a href='#EilenbergMacLane45'>Eilenberg-Maclane 45</a> was a clash of ideas from abstract <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a> (Mac Lane) and <a class='existingWikiWord' href='/nlab/show/topology'>topology</a>/<a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a> (Eilenberg). It was first rejected on the ground that it had no content but was later published. Since then category theory has flourished into almost all areas of mathematics, has found many applications outside mathematics and even attempts to build a <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations</a> of mathematics.</p>
@@ -1083,12 +1094,16 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Peter+Freyd'>Peter Freyd</a>, <em>Abelian Categories – An Introduction to the theory of functors</em>, originally published by Harper and Row, New York(1964), Reprints in Theory and Applications of Categories, No. 3, 2003 (<a href='http://www.emis.de/journals/TAC/reprints/articles/3/tr3abs.html'>TAC</a>, <a href='http://emis.maths.adelaide.edu.au/journals/TAC/reprints/articles/3/tr3.pdf'>pdf</a>)</p>
 </li>
 
+<li id='Freyd65'>
+<p><a class='existingWikiWord' href='/nlab/show/Peter+Freyd'>Peter Freyd</a>, <em>The theories of functors and models</em>, in Proceedings of <em>Symposium on the Theory of Models</em>, North Holland, 1965 (<a href='https://www.sciencedirect.com/science/book/9780720422337'>web</a>)</p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Peter+Freyd'>Peter Freyd</a> and Andre Scedrov, <em><a class='existingWikiWord' href='/nlab/show/Categories%2C+Allegories'>Categories, Allegories</a></em>, Mathematical Library Vol 39, North-Holland (1990). ISBN 978-0-444-70368-2.</p>
 </li>
 
 <li id='LawvereSchanuel09'>
-<p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>F. William Lawvere</a> and <a class='existingWikiWord' href='/nlab/show/Stephen+Schanuel'>Stephen Schanuel</a>, <em>Conceptual Mathematics: a first introduction to categories</em>, <math class='maruku-mathml' display='inline' id='mathml_58d17defab181878c60d348686ec46df7db98190_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>2</mn> <mi>nd</mi></msup></mrow><annotation encoding='application/x-tex'>2^{nd}</annotation></semantics></math> Edition, Cambridge University Press 2009 (<a href='http://fef.ogu.edu.tr/matbil/eilgaz/kategori.pdf'>pdf</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>F. William Lawvere</a> and <a class='existingWikiWord' href='/nlab/show/Stephen+Schanuel'>Stephen Schanuel</a>, <em>Conceptual Mathematics: a first introduction to categories</em>, <math class='maruku-mathml' display='inline' id='mathml_c59b935af86e52af22e0603e02c1b8f969c879e0_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>2</mn> <mi>nd</mi></msup></mrow><annotation encoding='application/x-tex'>2^{nd}</annotation></semantics></math> Edition, Cambridge University Press 2009 (<a href='http://fef.ogu.edu.tr/matbil/eilgaz/kategori.pdf'>pdf</a>)</p>
 </li>
 
 <li>
@@ -1119,7 +1134,7 @@ margin-left: 0em;
 <p>The standard monographs on <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a> are</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>, <a class='existingWikiWord' href='/nlab/show/Saunders+Mac+Lane'>Saunders Mac Lane</a>, <em><a class='existingWikiWord' href='/nlab/show/Sheaves+in+Geometry+and+Logic'>Sheaves in Geometry and Logic</a></em> (for which the <math class='maruku-mathml' display='inline' id='mathml_58d17defab181878c60d348686ec46df7db98190_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab currently provides detailed linked indexes)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>, <a class='existingWikiWord' href='/nlab/show/Saunders+Mac+Lane'>Saunders Mac Lane</a>, <em><a class='existingWikiWord' href='/nlab/show/Sheaves+in+Geometry+and+Logic'>Sheaves in Geometry and Logic</a></em> (for which the <math class='maruku-mathml' display='inline' id='mathml_c59b935af86e52af22e0603e02c1b8f969c879e0_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab currently provides detailed linked indexes)</li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <em>Topos theory</em>, 1977.</li>
 
@@ -1216,16 +1231,16 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  7, 2018 14:37:31
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.109.125.38).
-  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
+  <p>
+  Last revised on June  2, 2018 at 07:48:05.
+  See the <a href="https://ncatlab.org/nlab/history/category theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/category+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+theory/231" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(231 revisions)</span> | <a href="/nlab/show/diff/category+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/category+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+theory/232" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(232 revisions)</span> | <a href="/nlab/show/diff/category+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/category theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/category+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
