--- a/pages/16306.html
+++ b/pages/16306.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -575,7 +575,7 @@ margin-left: 0em;
 
 <p>This <em>objective logic</em> as presented by Hegel is hence rather unlike common <a class='existingWikiWord' href='/nlab/show/predicate+logic'>predicate logic</a>, a fact that led to the rejection of this school of <a class='existingWikiWord' href='/nlab/show/objective+idealism'>objective idealism</a> by <a class='existingWikiWord' href='/nlab/show/Bertrand+Russell'>Bertrand Russell</a> and the school of <a class='existingWikiWord' href='/nlab/show/analytic+philosophy'>analytic philosophy</a>.</p>
 
-<p>In (<a href='#Lawvere94b'>Lawvere 94b</a>) it is suggested that <a class='existingWikiWord' href='/nlab/show/universal+construction'>universal constructions</a> in <a class='existingWikiWord' href='/nlab/show/logic'>categorical logic</a> and <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a>, such as <a class='existingWikiWord' href='/nlab/show/adjunction'>adjunctions</a>, should be thought of as the formal incarnation of Hegel’s <em>objective logic</em>. Related suggestions are implicit in many of <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>Lawvere</a>’s writings, see at <em><a href='William+Lawvere#RelationToPhilosophy'>Lawvere – Mathematics relating to philosophy</a></em>.</p>
+<p>In (<a href='#Lawvere94'>Lawvere 94</a>) it is suggested that <a class='existingWikiWord' href='/nlab/show/universal+construction'>universal constructions</a> in <a class='existingWikiWord' href='/nlab/show/logic'>categorical logic</a> and <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a>, such as <a class='existingWikiWord' href='/nlab/show/adjunction'>adjunctions</a>, should be thought of as the formal incarnation of Hegel’s <em>objective logic</em>. Related suggestions are implicit in many of <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>Lawvere</a>’s writings, see at <em><a href='William+Lawvere#RelationToPhilosophy'>Lawvere – Mathematics relating to philosophy</a></em>.</p>
 
 <blockquote>
 <p id='ItIsMyBelief'> <a href='#Lawvere92'>Lawvere 92</a>: It is my belief that in the next decade and in the next century the technical advances forged by category theorists will be of value to dialectical philosophy, lending precise form with disputable mathematical models to ancient philosophical distinctions such as general vs. particular, objective vs. subjective, being vs. becoming, space vs. quantity, equality vs. difference, quantitative vs. qualitative etc. In turn the explicit attention by mathematicians to such philosophical questions is necessary to achieve the goal of making mathematics (and hence other sciences) more widely learnable and useable. Of course this will require that philosophers learn mathematics and that mathematicians learn philosophy.</p>
@@ -606,8 +606,8 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a>, <em>Categories of space and quantity</em>, in J. Echeverria et al (eds.), <em>The Space of mathematics</em> , de Gruyter, Berlin, New York, pages 14-30, 1992.</p>
 </li>
 
-<li id='Lawvere94b'>
-<p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a> <em><a class='existingWikiWord' href='/nlab/show/Tools+for+the+advancement+of+objective+logic'>Tools for the advancement of objective logic</a>: closed categories and toposes</em>, in J. Macnamara and <a class='existingWikiWord' href='/nlab/show/Gonzalo+E.+Reyes'>Gonzalo Reyes</a> (Eds.), <em>The Logical Foundations of Cognition</em>, Oxford University Press 1993 (Proceedings of the Febr. 1991 Vancouver Conference “Logic and Cognition”), pages 43-56, 1994.</p>
+<li id='Lawvere94'>
+<p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a>, <em><a class='existingWikiWord' href='/nlab/show/Tools+for+the+advancement+of+objective+logic'>Tools for the advancement of objective logic</a>: closed categories and toposes</em>, in J. Macnamara and <a class='existingWikiWord' href='/nlab/show/Gonzalo+E.+Reyes'>Gonzalo Reyes</a> (Eds.), <em>The Logical Foundations of Cognition</em>, Oxford University Press 1993 (Proceedings of the Febr. 1991 Vancouver Conference “Logic and Cognition”), pages 43-56, 1994.</p>
 </li>
 
 <li id='LawvereRosebrugh03'>
@@ -629,14 +629,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June  3, 2018 at 12:24:03.
+  Last revised on June  3, 2018 at 15:07:10.
   See the <a href="https://ncatlab.org/nlab/history/objective and subjective logic" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/objective+and+subjective+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/objective+and+subjective+logic/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/objective+and+subjective+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/objective+and+subjective+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/objective+and+subjective+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/objective+and+subjective+logic/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/objective+and+subjective+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/objective+and+subjective+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/objective and subjective logic/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
