--- a/pages/18451.html
+++ b/pages/18451.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -310,26 +309,27 @@ margin-left: 0em;
 <div id="revision">
     <p>A <em>small groupoid</em> is a <a class='existingWikiWord' href='/nlab/show/groupoid'>groupoid</a> with a <a class='existingWikiWord' href='/nlab/show/small+set'>small set</a> of <a class='existingWikiWord' href='/nlab/show/object'>objects</a>, instead of a <a class='existingWikiWord' href='/nlab/show/proper+class'>proper class</a>.</p>
 
-<p>In plain groupoid theory (<a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>) smallness is usually the default meaning of “groupoid”. But if one thinks of groupoids as special cases of <span class='newWikiWord'>categegories<a href='/nlab/new/categegories'>?</a></span>, and since for categories the default definition allows a proper class of objects, while otherwise one explicitly speaks of a <em><a class='existingWikiWord' href='/nlab/show/small+category'>small category</a></em>, it does make sense to speak of “small groupoids” at times.</p>
+<p>In plain groupoid theory (<a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>) smallness is usually the default meaning of “groupoid”. But if one thinks of groupoids as special cases of <a class='existingWikiWord' href='/nlab/show/category'>categories</a>, and since for categories the default definition allows a proper class of objects, while otherwise one explicitly speaks of a <em><a class='existingWikiWord' href='/nlab/show/small+category'>small category</a></em>, it does make sense to speak of “small groupoids” at times.</p>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Created on July 10, 2017 07:29:25 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.100.200.251)
+  <p>
+  Last revised on June  4, 2018 at 11:39:45.
+  See the <a href="https://ncatlab.org/nlab/history/small groupoid" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/small+groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/small+groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/small+groupoid/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/small+groupoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/small+groupoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/small groupoid/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/small+groupoid" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/small+groupoid" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/small+groupoid" id="view_source" rel="nofollow">Source</a>
