--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -305,19 +305,35 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>nn</p>
+    <h1 id='centered_table_test'>centered table test</h1>
+
+<h2 id='uncentered'>uncentered</h2>
+<table><thead><tr><th>column header 1</th><th>column header 2</th></tr></thead><tbody><tr><td style='text-align: left;'>item</td><td style='text-align: left;'>item</td></tr>
+</tbody></table>
+<h2 id='centered'>centered</h2>
+
+<div class='cent'><table><thead><tr><th>column header 1</th><th>column header 2</th></tr></thead><tbody><tr><td style='text-align: left;'>item</td><td style='text-align: left;'>item</td></tr>
+</tbody></table></div>
+
+<p>=–</p>
+
+<p>the above table is wrapped with <code>+-- {: .cent}</code></p>
+
+<p>to get this to actually center I added a CSS rule via with the Firefox extension Stylus</p>
+
+<p><code>div.cent table {margin-left: auto; margin-right: auto}</code></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on May 29, 2018 at 13:33:10.
+  Last revised on June  4, 2018 at 12:23:21.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1505" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1505 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1506" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1506 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
