--- a/pages/11003.html
+++ b/pages/11003.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8584/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -331,7 +330,7 @@ margin-left: 0em;
 <p>The original article is</p>
 
 <ul>
-<li id='DeligneMumford69'><a class='existingWikiWord' href='/nlab/show/Pierre+Deligne'>Pierre Deligne</a>, <a class='existingWikiWord' href='/nlab/show/David+Mumford'>David Mumford</a>, <em>The irreducibility of the space of curves of given genus</em>, Publications Mathématiques de l’IHÉS (Paris) 36: 75–109 (1969) <a href='http://www.numdam.org/numdam-bin/fitem?id=PMIHES_1969__36__75_0'>numdam</a></li>
+<li id='DeligneMumford69'><a class='existingWikiWord' href='/nlab/show/Pierre+Deligne'>Pierre Deligne</a>, <a class='existingWikiWord' href='/nlab/show/David+Mumford'>David Mumford</a>, <em>The irreducibility of the space of curves of given genus</em>, Publications Mathématiques de l’IHÉS (Paris) 36: 75–109 (1969) <a href='http://www.numdam.org/item/PMIHES_1969__36__75_0'>numdam</a></li>
 </ul>
 
 <p>Reviews include</p>
@@ -351,19 +350,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 16, 2014 02:11:07 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.130.20)
+  <p>
+  Last revised on June  5, 2018 at 05:26:10.
+  See the <a href="https://ncatlab.org/nlab/history/Deligne-Mumford compactification" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Deligne-Mumford+compactification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Deligne-Mumford+compactification/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Deligne-Mumford+compactification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Deligne-Mumford+compactification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Deligne-Mumford+compactification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Deligne-Mumford+compactification/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Deligne-Mumford+compactification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Deligne-Mumford+compactification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Deligne-Mumford compactification/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Deligne-Mumford+compactification" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Deligne-Mumford+compactification" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Deligne-Mumford+compactification" id="view_source" rel="nofollow">Source</a>
