--- a/pages/18451.html
+++ b/pages/18451.html
@@ -317,14 +317,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June  4, 2018 at 11:39:45.
+  Last revised on June  5, 2018 at 11:46:34.
   See the <a href="https://ncatlab.org/nlab/history/small groupoid" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/small+groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/small+groupoid/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/small+groupoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/small+groupoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/small+groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/small+groupoid/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/small+groupoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/small+groupoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/small groupoid/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
