--- a/pages/74.html
+++ b/pages/74.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1198/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -538,7 +537,7 @@ margin-left: 0em;
 
 <h3 id='as_a_tool_in_higher_category_theory'>As a tool in higher category theory</h3>
 
-<p>Enriched categories may be used to model objects in <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>: if the objects of the enriching category <math class='maruku-mathml' display='inline' id='mathml_d97d00ecaf2565233979fd3a3251c5502fac88d6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> behave themselves as <a class='existingWikiWord' href='/nlab/show/%28n%2Cr%29-category'>(n,r)-categories</a>, then a <math class='maruku-mathml' display='inline' id='mathml_d97d00ecaf2565233979fd3a3251c5502fac88d6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched category</a> behaves like a (possibly special) <math class='maruku-mathml' display='inline' id='mathml_d97d00ecaf2565233979fd3a3251c5502fac88d6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo>,</mo><mi>r</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n+1,r+1)</annotation></semantics></math>-category.</p>
+<p>Enriched categories may be used to model objects in <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>: if the objects of the enriching category <math class='maruku-mathml' display='inline' id='mathml_d062243e9f142fc374188a44cfe24bddc45c629e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> behave themselves as <a class='existingWikiWord' href='/nlab/show/%28n%2Cr%29-category'>(n,r)-categories</a>, then a <math class='maruku-mathml' display='inline' id='mathml_d062243e9f142fc374188a44cfe24bddc45c629e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched category</a> behaves like a (possibly special) <math class='maruku-mathml' display='inline' id='mathml_d062243e9f142fc374188a44cfe24bddc45c629e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo>,</mo><mi>r</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n+1,r+1)</annotation></semantics></math>-category.</p>
 
 <p>For instance</p>
 
@@ -564,10 +563,16 @@ margin-left: 0em;
 
 <h2 id='literature'>Literature</h2>
 
-<p>The standard monograph on enriched category is</p>
+<p>Textbook accounts include</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Max+Kelly'>Max Kelly</a>, <em>Basic Concepts of Enriched Category Theory</em>, Cambridge University Press, Lecture Notes in Mathematics 64, 1982, Republished in: Reprints in Theory and Applications of Categories, No. 10 (2005) pp. 1-136 (<a href='http://www.tac.mta.ca/tac/reprints/articles/10/tr10.pdf'>pdf</a>)</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Max+Kelly'>Max Kelly</a>, <em>Basic Concepts of Enriched Category Theory</em>, Cambridge University Press, Lecture Notes in Mathematics 64, 1982, Republished in: Reprints in Theory and Applications of Categories, No. 10 (2005) pp. 1-136 (<a href='http://www.tac.mta.ca/tac/reprints/articles/10/tr10.pdf'>pdf</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Francis+Borceux'>Francis Borceux</a>, Vol 2, chapter 6 of <em><a class='existingWikiWord' href='/nlab/show/Handbook+of+Categorical+Algebra'>Handbook of Categorical Algebra</a></em>, Cambridge University Press (1994)</p>
+</li>
 </ul>
 
 <p>Also</p>
@@ -719,19 +724,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June  1, 2016 14:34:15 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  <p>
+  Last revised on June  6, 2018 at 08:20:59.
+  See the <a href="https://ncatlab.org/nlab/history/enriched category theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/enriched+category+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/enriched+category+theory/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/enriched+category+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/enriched+category+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/enriched+category+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/enriched+category+theory/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/enriched+category+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/enriched+category+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/enriched category theory/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/enriched+category+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/enriched+category+theory" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/enriched+category+theory" id="view_source" rel="nofollow">Source</a>
