--- a/pages/15577.html
+++ b/pages/15577.html
@@ -311,7 +311,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>Ran space</em> <math class='maruku-mathml' display='inline' id='mathml_e3545d8d34b8b38b86300309fece63334d53b6ec_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ran</mi><mi>X</mi></mrow><annotation encoding='application/x-tex'>Ran X</annotation></semantics></math> of a <a class='existingWikiWord' href='/nlab/show/space'>space</a> is the space of all <a class='existingWikiWord' href='/nlab/show/finite+set'>finite</a> <a class='existingWikiWord' href='/nlab/show/subset'>subsets</a> of <math class='maruku-mathml' display='inline' id='mathml_e3545d8d34b8b38b86300309fece63334d53b6ec_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, equipped with geometric structure that knows about points merging to a single point</p>
+<p>The <em>Ran space</em> <math class='maruku-mathml' display='inline' id='mathml_d77154126e077edf7017ac7a48a21f49902793a5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ran</mi><mi>X</mi></mrow><annotation encoding='application/x-tex'>Ran X</annotation></semantics></math> of a <a class='existingWikiWord' href='/nlab/show/space'>space</a> is the space of all <a class='existingWikiWord' href='/nlab/show/finite+set'>finite</a> <a class='existingWikiWord' href='/nlab/show/subset'>subsets</a> of <math class='maruku-mathml' display='inline' id='mathml_d77154126e077edf7017ac7a48a21f49902793a5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, equipped with geometric structure that knows about points merging to a single point</p>
 
 <p>The Ran space is defined, in topological and algebro-geometric contexts, for instance in (<a href='#LurieTamagawaNumbers'>Lurie 14, lectures 7-9</a>).</p>
 
@@ -338,7 +338,7 @@ margin-left: 0em;
 <p>Textbook accounts include</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a>, section 5.5.1 of <em><span class='newWikiWord'>Higher Aklgebra<a href='/nlab/new/Higher+Aklgebra'>?</a></span></em></li>
+<li><a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a>, section 5.5.1 of <em><a class='existingWikiWord' href='/nlab/show/Higher+Algebra'>Higher Algebra</a></em></li>
 </ul>
 
 <p>Rational functions as functions on the Ran space in the sense of functions on the complement of finitely many points as these range over all points, is discussed in</p>
@@ -375,14 +375,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June  6, 2018 at 12:07:25.
+  Last revised on June  6, 2018 at 13:39:15.
   See the <a href="https://ncatlab.org/nlab/history/Ran space" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ran+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ran+space/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Ran+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ran+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ran+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ran+space/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Ran+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ran+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Ran space/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
